[package]
name = "os-in-rust"
version = "0.1.0"
edition = "2021"
authors = ["Kamal Chandra Upreti <kamalchettri1996@gmail.com>"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
